added header to demo with login info. fixed spacing/styling. fixed email and config settings.

--- a/app/assets/stylesheets/reuman.css.scss
+++ b/app/assets/stylesheets/reuman.css.scss
@@ -15,6 +15,13 @@ nav.navbar-inner { -moz-border-radius: 0; -webkit-border-radius: 0; border-radiu
 
 .navbar .nav > li > a:focus, .navbar .nav > li > a:hover { background-color:#f6f6f6;}
 
+.demo {
+  background: #fff6bf;
+  color: #514721;
+  border-color: #ffd324;
+  padding: 0.8em;
+}
+
 header { background-color:#507AAA;
   .header-inner {
     padding:0 20px;
