--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,3 +1,7 @@
+%header.demo
+  %h4 This is a <b>DEMO</b> of the REU Manager. You can login to the admin interface using the email<b> 'admin@reumanager.com'</b> and password <b>'DemoApp'</b>.
+  %h4 Similarly, you can create a new student account by applying or view an example student account by using the email <b>'jmadison@reumanager.com'</b> and password <b>'DemoApp'</b>.
+
 %header.container
   .header-inner
     %h1 #{link_to(Setting[:university], Setting[:university_url])}, #{link_to(Setting[:department], Setting[:department_url])}
