--- a/app/views/applicants/registrations/status.html.erb
+++ b/app/views/applicants/registrations/status.html.erb
@@ -1,83 +1,79 @@
-<section id="status">
-  <div class='inner'>
+<div class="panel panel-primary">
+
+  <div class="panel-heading">Status</div>
+  <div class="panel-body">
+
     <%= status_error_messages! if current_applicant %>
     <%= application_status if current_applicant %>
   </div>
 
+  <div class="panel-heading">Contact Info</div>
+    <div class="panel-body">
 
-
-  <div class='row'>
-    <div class='span6'>
-      <div class='inner'>
-        <h2>Contact Info</h2>
-        <ul>
-          <li><b>Name</b>  <%= current_applicant.name if current_applicant.name %></li>
-          <li><b>Email</b> <%= current_applicant.email %></li>
-          <li><b>Phone</b> <%= current_applicant.phone if current_applicant.phone %></li>
-          <li><b>Address</b>  <%= current_applicant.address %></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class='span6'>
-      <div class='inner'>
-        <h2>Personal Statement</h2>
-        <%= raw Markdown.render(current_applicant.statement) if current_applicant.statement %>
-      </div>
-    </div>
-
-    <hr class='clear inner' />
-
-    <div class='span6'>
-      <div class='inner'>
-        <h2>Recommender Info</h2>
-        <ul>
-          <%- current_applicant.recommenders.each do |recommender| -%>
-            <li>
-              <%= raw recommender %><br />
-              <%= recommendation_received_label(recommender) %>
-            </li>
-          <%- end -%>
-        </ul>
-      </div>
-    </div>
-
-    <div class='span6'>
-      <div class='inner'>
-        <h2>Academic Info</h2>
-        <ul>
-          <%- current_applicant.records.each do |record| -%>
-            <%- if record.to_s.present? -%>
-              <li><%= raw record.to_s %></li>
-            <%- end -%>
-          <%- end -%>
-
-          <%- current_applicant.awards.each do |award| -%>
-            <li><b>Award</b> <%= award %></li>
-          <%- end -%>
-
-          <li><b>Computer Skills</b> <%=raw(Markdown.render(current_applicant.cpu_skills)) if current_applicant.cpu_skills %></li>
-          <li><b>Laboratory Skills</b> <%=raw(Markdown.render(current_applicant.lab_skills)) if current_applicant.lab_skills %></li>
-        </ul>
-      </div>
-    </div>
-
-  </div> <!-- end .row -->
-
-  <% if current_applicant.state == 'completed_recommender_info' && !expired? %>
-    <%= content_tag :div, content_tag(:p, link_to("Submit Application", submit_application_path, :class => "btn btn-success")), :class => 'inner' %>
-  <% else %>
-    <h3>The application deadline has past</h3>
-  <% end %>
+    <ul class="form-group">
+      <li><b>Name</b>  <%= current_applicant.name if current_applicant.name %></li>
+      <li><b>Email</b> <%= current_applicant.email %></li>
+      <li><b>Phone</b> <%= current_applicant.phone if current_applicant.phone %></li>
+      <li><b>Address</b>  <%= current_applicant.address %></li>
+    </ul>
+  </div>
 
   <hr class='clear inner' />
-  <% if !expired? %>
-    <div class="inner">
-      <%= content_tag :p, link_to("Edit Application Data", edit_applicant_registration_path(current_applicant), :class => "btn btn-mini btn-info") + raw("&nbsp;&nbsp;&nbsp;") unless current_applicant.submitted_at %>
-      <p>Changed your mind? <%= link_to "Delete your application", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete, :class => "btn btn-mini btn-danger" %></p>
-      <% unless current_applicant.state == 'complete' || current_applicant.state == 'submitted' %>
-        <small><strong>You can <%= link_to "logout", destroy_applicant_session_path, :method => :delete %> and continue you application at anytime<%= ", however, it will not be accepted until all the above data has been submitted" %>.</strong></small>
+
+  <div class="panel-heading">Personal Statement</div>
+  <div class="panel-body">
+    <%= raw Markdown.render(current_applicant.statement) if current_applicant.statement %>
+  </div>
+
+  <hr class='clear inner' />
+
+  <div class="panel-heading">Recommenders</div>
+  <div class="panel-body">
+    <ul>
+      <%- current_applicant.recommenders.each do |recommender| -%>
+        <li>
+          <%= raw recommender %><br />
+          <%= recommendation_received_label(recommender) %>
+        </li>
       <%- end -%>
-    </div>
-  <% end %>
-</section>
+    </ul>
+  </div>
+
+  <hr class='clear inner' />
+
+  <div class="panel-heading">Academic Info</div>
+  <div class="panel-body">
+
+    <ul>
+      <%- current_applicant.records.each do |record| -%>
+        <%- if record.to_s.present? -%>
+          <li><%= raw record.to_s %></li>
+        <%- end -%>
+      <%- end -%>
+
+      <%- current_applicant.awards.each do |award| -%>
+        <li><b>Award</b> <%= award %></li>
+      <%- end -%>
+
+      <li><b>Computer Skills</b> <%=raw(Markdown.render(current_applicant.cpu_skills)) if current_applicant.cpu_skills %></li>
+      <li><b>Laboratory Skills</b> <%=raw(Markdown.render(current_applicant.lab_skills)) if current_applicant.lab_skills %></li>
+    </ul>
+  </div>
+</div>
+
+<% if current_applicant.state == 'completed_recommender_info' && !expired? %>
+  <%= content_tag :div, content_tag(:p, link_to("Submit Application", submit_application_path, :class => "btn btn-success")), :class => 'inner' %>
+<% else %>
+  <h3>The application deadline has past</h3>
+<% end %>
+
+<hr class='clear inner' />
+<% if !expired? %>
+  <div class="inner">
+    <%= content_tag :p, link_to("Edit Application Data", edit_applicant_registration_path(current_applicant), :class => "btn btn-mini btn-ar btn-primary") + raw("&nbsp;&nbsp;&nbsp;") unless current_applicant.submitted_at %>
+    <p>Changed your mind? <%= link_to "Delete your application", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete, :class => "btn btn-mini btn-danger" %></p>
+    <% unless current_applicant.state == 'complete' || current_applicant.state == 'submitted' %>
+      <small><strong>You can <%= link_to "logout", destroy_applicant_session_path, :method => :delete %> and continue you application at anytime<%= ", however, it will not be accepted until all the above data has been submitted" %>.</strong></small>
+    <%- end -%>
+  </div>
+<% end %>
