--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,14 +1,19 @@
 <div class='inner'>
-  <h2>Forgot your password?</h2>
+  <div class="panel panel-primary">
+    <div class="panel-heading">Forgot your password?</div>
+    <div class="panel-body">
 
-  <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-    <%= devise_error_messages! %>
+      <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+        <%= devise_error_messages! %>
 
-    <%= f.label :email %>
-    <%= f.email_field :email %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, :class => "form-control" %>
+        </div>
 
-    <p><%= f.submit "Send me reset password instructions", :class => 'btn' %></p>
-  <% end %>
-
-  <%= render :partial => "devise/shared/links" %>
+        <%= f.submit "Send me reset password instructions", :class => 'btn btn-ar btn-primary' %>
+      <% end %>
+      <%= render :partial => "devise/shared/links" %>
+    </div>
+  </div>
 </div>
