--- a/app/assets/stylesheets/reuman.css.scss
+++ b/app/assets/stylesheets/reuman.css.scss
@@ -100,3 +100,8 @@ footer.container { font-size:0.8em;
   text-align: center;
   margin: 40px 0 0 0;
 }
+
+.general-info {
+  margin-left: 15px;
+  width: 395px;
+}
