--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,21 +1,25 @@
 .row
   .span8
     .inner
-      %h3 General Info
-      = raw Snippet[:general_description]
-      - if expired?
-        %h3.deadline
-          The deadline for applications has passed. Please sign in to see existing application status.
-      - else
-        %h3.deadline
-          Application Deadline #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]}
-        .app_button
-          - if applicant_signed_in? && current_applicant.state == 'submitted'
-            = link_to "Check Status", applicant_status_url, :class => "btn btn-large btn-success"
-          - elsif applicant_signed_in?
-            = link_to "Finish Application", edit_applicant_registration_path, :class => "btn btn-large btn-success"
-          - else
-            = link_to "Apply Now", new_applicant_registration_path, :class => "btn btn-large btn-success"
+      %div.clearfix
+        %h3 General Info
+        = image_tag('ucsd_eng_bldg.jpeg', class: 'pull-left')
+        .general-info.pull-left
+          = raw Snippet[:general_description]
+      %div.clearfix
+        - if expired?
+          %h3.deadline
+            The deadline for applications has passed. Please sign in to see existing application status.
+        - else
+          %h3.deadline
+            Application Deadline #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]}
+          .app_button
+            - if applicant_signed_in? && current_applicant.state == 'submitted'
+              = link_to "Check Status", applicant_status_url, :class => "btn btn-large btn-success"
+            - elsif applicant_signed_in?
+              = link_to "Finish Application", edit_applicant_registration_path, :class => "btn btn-large btn-success"
+            - else
+              = link_to "Apply Now", new_applicant_registration_path, :class => "btn btn-large btn-success"
 
   %aside.span4
     .inner
