--- a/app/views/applicants/registrations/new.html.erb
+++ b/app/views/applicants/registrations/new.html.erb
@@ -12,22 +12,22 @@
         <div class="form-group">
 
           <%= f.label :first_name, "First Name" %>
-          <%= f.text_field :first_name, :class => "form-control", :placeholder => "first name" %>
+          <%= f.text_field :first_name, :class => "form-control", :placeholder => "George" %>
 
           <%= f.label :last_name, "Last Name" %>
-          <%= f.text_field :last_name, :class => "form-control", :placeholder => "last name" %>
+          <%= f.text_field :last_name, :class => "form-control", :placeholder => "Washington" %>
 
           <%= f.label :email %>
-          <%= f.email_field :email, :class => "form-control", :placeholder => "email address" %>
+          <%= f.email_field :email, :class => "form-control", :placeholder => "george@whitehouse.gov" %>
 
           <%= f.label :phone, "Phone" %>
-          <%= f.text_field :phone, :class => "form-control", :placeholder => "phone number" %>
+          <%= f.text_field :phone, :class => "form-control", :placeholder => "555-555-5555" %>
 
           <%= f.label :password %>
-          <%= f.password_field :password, :class => "form-control", :placeholder => "password" %>
+          <%= f.password_field :password, :class => "form-control", :placeholder => "8 or more characters please" %>
 
           <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, :class => "form-control", :placeholder => "confirm password" %>
+          <%= f.password_field :password_confirmation, :class => "form-control", :placeholder => "Same as in password" %>
 
           <hr class='inner clear'>
 
