--- a/app/views/applicants/academic_records/_award_fields.html.erb
+++ b/app/views/applicants/academic_records/_award_fields.html.erb
@@ -1,32 +1,15 @@
 <fieldset>
-  <div class="row">
+  <%= f.label :title %>
+  <%= f.text_field :title, :placeholder => 'National medal of science', :class => 'form-control' %>
+  <%= f.label :date %>
+  <%= f.text_field :date, 'data-behaviour' => 'datepicker', :placeholder => "Date (YYYY-MM-DD)", :class => 'form-control' %>
+  <%= f.label :description %>
+  <%= f.text_area :description, :class => 'span8', :rows => 2, :placeholder => "Award Description (Optional)", :class => 'form-control' %>
 
-    <div class="span4">
-      <div class="inner">
-        <%= f.text_field :title, :placeholder => :Title %>
-      </div>
-    </div>
-
-    <div class="span4 offset1">
-      <div class="inner">
-        <%= f.text_field :date, 'data-behaviour' => 'datepicker', :placeholder => "Date (YYYY-MM-DD)" %>
-      </div>
-    </div>
-
-    <div class="span9">
-      <div class="inner">
-        <%= f.text_area :description, :class => 'span8', :rows => 2, :placeholder => "Award Description (Optional)" %>
-      </div>
-    </div>
-
-    <div class="span9">
-      <div class="inner">
-        <%= f.hidden_field :_destroy %>
-        <%= link_to "remove this record", '#', class: "remove_fields btn btn-mini btn-danger" %>
-      </div>
-    </div>
-
+  <div class="inner">
+    <br />
+    <%= f.hidden_field :_destroy %>
+    <%= link_to "remove this record", '#', class: "remove_fields btn btn-mini btn-danger" %>
   </div>
-
   <hr class="inner clear" />
 </fieldset>
