--- a/app/views/applicants/registrations/_address_fields.html.erb
+++ b/app/views/applicants/registrations/_address_fields.html.erb
@@ -1,26 +1,26 @@
 <fieldset>
   <hr />
   <%= f.label :label %>
-  <%= f.select :label, options_for_select(%w( Home School Other), f.object.label), { :prompt => "Location Label" }, { :class => "form-control" } %>
+  <%= f.select :label, options_for_select(%w(Home School Other), f.object.label), { :prompt => "Location Label" }, { :class => "form-control" } %>
 
 
   <%= f.label :permanent %>
   <%= f.select :permanent, options_for_select(["Yes", "No"], f.object.permanent), { :prompt => 'Permanent Address?' }, { :class => "form-control" } %>
 
   <%= f.label :address %>
-  <%= f.text_field :address, :class => "form-control", :placeholder => :Address %>
+  <%= f.text_field :address, :class => "form-control", :placeholder => '1600 Pennsylvania Ave' %>
 
   <%= f.label :address2 %>
-  <%= f.text_field :address2, :class => "form-control", :placeholder => 'Address Line 2' %>
+  <%= f.text_field :address2, :class => "form-control", :placeholder => 'Apt # 5' %>
 
   <%= f.label :city %>
-  <%= f.text_field :city, :class => "form-control", :placeholder => :City %>
+  <%= f.text_field :city, :class => "form-control", :placeholder => 'Washington DC' %>
 
   <%= f.label :state %>
-  <%= subregion_select f.object_name, :state, 'US', {selected: f.object.state ,  :prompt => 'State or Territory' }, :class => "form-control"  %>
+  <%= subregion_select f.object_name, :state, 'US', {selected: f.object.state ,  :prompt => 'State or Territoriy' }, :class => "form-control"  %>
 
   <%= f.label :zip %>
-  <%= f.text_field :zip, :class => "form-control", :placeholder => "Zip Code" %>
+  <%= f.text_field :zip, :class => "form-control", :placeholder => "20500" %>
 
   <br />
   <%= f.hidden_field :_destroy %>
