--- a/app/views/layouts/_footer_text.html.haml
+++ b/app/views/layouts/_footer_text.html.haml
@@ -76,22 +76,12 @@
 
 
           %div{ :class => "col-md-6", :id => "subscribe" }
-            %h3.footer-widget-title
-              Subscribe
             %p
-              Lorem ipsum Amet fugiat elit nisi anim mollit minim labore ut esse Duis ullamco ad dolor veniam velit.
 
-          %div.input-group
-            %input{ :type=> "text", :class => "form-control",  :placeholder => "Email Address" }
-            %span.input-group-btn
-              %button{ :class => "btn btn-ar btn-primary", :type => "button" }
-                Subscribe
+            %p
+              The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
 
   %div{ :id => "footer" }
     %span
-      Copyright
-      = "#{Date.today.year}"
-      = link_to "Regents of the University of California", "http://www.universityofcalifornia.edu/regents/"
+      © 2016. All rights reserved. XHTML1, CSS3, and Section 508 valid.
       | All Rights Reserved
-      %span.hidden-phone
-      |
