--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,5 @@
 .row
-  .col-md-8
+  .col-md-12
     .col-md-12
       %h3 General Info
     .col-md-5
@@ -21,5 +21,15 @@
           - else
             = link_to "Apply Now", new_applicant_registration_path, :class => "btn btn-large btn-success"
 
-  %aside.col-md-4
-    =render :partial => "aside_text"
+  .col-md-12
+    %section.col-md-4
+      %h3 Program Highlights
+      = raw Snippet[:highlights]
+
+    %section.col-md-4
+      %h3 Eligibility Requirements
+      = raw Snippet[:eligibility_requirements]
+
+    %section.col-md-4
+      %h3 Application Information
+      = raw Snippet[:application_information]
