--- a/app/views/layouts/_footer_text.html.haml
+++ b/app/views/layouts/_footer_text.html.haml
@@ -1,11 +1,11 @@
 %p
-  %aside{ :id => "footer-widgets"}
+  %aside#footer-widgets
     %div.container
-      %div{ :class => "row", :id => "sitem" }
-        %div{ :class => "col-md-6", :id => "sitem" }
+      %div#sitem.row
+        %div#sitem.col-md-6
           %h3.footer-widget-title
             Sitemap
-          %ul.list-unstyled.three_cols
+          %ul.list-unstyled
             - if params[:controller] == 'welcome'
               %li.active
                 =link_to "Welcome", root_path, :class => 'active'
@@ -75,13 +75,11 @@
                   = link_to "Login", new_applicant_session_url, :class => 'active'
 
 
-          %div{ :class => "col-md-6", :id => "subscribe" }
-            %p
-
+          %div.col-md-6
             %p
               The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
 
-  %div{ :id => "footer" }
+  %div#footer
     %span
       © 2016. All rights reserved. XHTML1, CSS3, and Section 508 valid.
       | All Rights Reserved
