--- a/app/views/layouts/_footer_text.html.haml
+++ b/app/views/layouts/_footer_text.html.haml
@@ -1,85 +1,82 @@
-%p
-  %aside#footer-widgets
-    %div.container
-      %div#sitem.row
-        %div#sitem.col-md-6
-          %h3.footer-widget-title
-            Sitemap
-          %ul.list-unstyled
-            - if params[:controller] == 'welcome'
-              %li.active
-                =link_to "Welcome", root_path, :class => 'active'
-            - else
-              %li
-                =link_to "Welcome", root_path, :class => 'active'
-            - if params[:controller] == 'applicants/registrations' && params[:action] !=  'status'
-              - if applicant_signed_in?
-                %li.active
-                  =link_to "Profile", edit_applicant_registration_path, :class => 'active'
-              - else
-                %li.active
-                  =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
-                  =content_tag :li, link_to('Admin', rails_admin_path)
-            - else
-              - if applicant_signed_in?
-                %li
-                  =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
-              - else
-                %li
-                  =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
-                  =content_tag :li, link_to('Admin', rails_admin_path)
+%aside#footer-widgets
+  .row
+    .col-md-12
+      %ul.list-unstyled
+        - if params[:controller] == 'welcome'
+          %li.pull-left
+            =link_to "Welcome", root_path, :class => 'active'
+        - else
+          %li.pull-left
+            =link_to "Welcome", root_path, :class => 'active'
+        - if params[:controller] == 'applicants/registrations' && params[:action] !=  'status'
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Profile", edit_applicant_registration_path, :class => 'active'
+          - else
+            %li.pull-left
+              =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
+            %li.pull-left
+              =link_to 'Admin', rails_admin_path
+        - else
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
+          - else
+            %li.pull-left
+              =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
+            %li.pull-left
+              =link_to 'Admin', rails_admin_path
 
 
-            - if params[:controller] == 'applicants/academic_records'
-              - if applicant_signed_in?
-                %li.active
-                  =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
-            - else
-              - if applicant_signed_in?
-                %li
-                  =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
+        - if params[:controller] == 'applicants/academic_records'
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
+        - else
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Academic Records", applicants_records_url, :class => 'active' unless current_applicant.submitted_at
 
 
-            - if params[:controller] == 'applicants/recommenders'
-              - if applicant_signed_in?
-                %li.active
-                  =link_to "Recommendation", applicants_recommenders_url, :class => 'active' unless current_applicant.submitted_at
-            - else
-              - if applicant_signed_in?
-                %li
-                  =link_to "Recommendation", applicants_recommenders_url, :class => 'active' unless current_applicant.submitted_at
+        - if params[:controller] == 'applicants/recommenders'
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Recommendation", applicants_recommenders_url, :class => 'active' unless current_applicant.submitted_at
+        - else
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Recommendation", applicants_recommenders_url, :class => 'active' unless current_applicant.submitted_at
 
 
-            - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
-              - if applicant_signed_in?
-                %li.active
-                  =link_to "Status", applicant_status_url, :class => 'active'
-            - else
-              - if applicant_signed_in?
-                %li
-                  =link_to "Status", applicant_status_url, :class => 'active'
+        - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Status", applicant_status_url, :class => 'active'
+        - else
+          - if applicant_signed_in?
+            %li.pull-left
+              =link_to "Status", applicant_status_url, :class => 'active'
 
-            - if params[:controller] == 'applicants/sessions'
-              - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
-                %li.active
-                  = user_signed_in? ? link_to("Logout1", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
-              - else
-                %li.active
-                  = link_to "Login", new_applicant_session_url, :class => 'active'
-            - else
-              - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
-                %li
-                  = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
-              - else
-                %li
-                  = link_to "Login", new_applicant_session_url, :class => 'active'
+        - if params[:controller] == 'applicants/sessions'
+          - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
+            %li.pull-left
+              = user_signed_in? ? link_to("Logout1", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
+          - else
+            %li.pull-left
+              = link_to "Login", new_applicant_session_url, :class => 'active'
+        - else
+          - if applicant_signed_in? || user_signed_in? #|| user_signed_in?
+            %li.pull-left
+              = user_signed_in? ? link_to("Logout", destroy_user_session_path, :method => :delete) : link_to("Logout", destroy_applicant_session_path, :method => :delete)
+          - else
+            %li.pull-left
+              = link_to "Login", new_applicant_session_url, :class => 'active'
 
 
-          %div.col-md-6
-            %p
-              The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
+      %div.col-md-11
+        %p
+          The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
 
-  %div#footer
-    %span
-      © 2016. All rights reserved. XHTML1, CSS3, and Section 508 valid.
-      | All Rights Reserved
+%div#footer
+  %span
+    © 2016. All rights reserved. XHTML1, CSS3, and Section 508 valid.
