--- a/app/views/layouts/_footer_text.html.haml
+++ b/app/views/layouts/_footer_text.html.haml
@@ -75,7 +75,9 @@
 
       %div.col-md-11
         %p
-          If you have any comments, questions, or suggestions, please contact us at aengler@ucsd.edu.
+          If you have any comments, questions, or suggestions, please contact us at
+          %a(href='mailto:aengler@ucsd.edu')
+            aengler@ucsd.edu.
         %p
           The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
 
